forgot to change website name lmfao

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,7 +24,7 @@
   <link href=" https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css " rel="stylesheet">
 
 </script>
-  <title>React App</title>
+  <title>ChemTool Vision</title>
 </head>
 
 <body>
