--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="description" content="Understanding how chemistry tools work with the power of ChemToolVision" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,14 +22,14 @@
   <!-- CDN -->
   <!-- Bulma -->
   <link href=" https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css " rel="stylesheet">
-
-</script>
   <title>ChemTool Vision</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <script type="module" src="/src/index.jsx"></script>
+  <!-- <div id="root"></div> -->
   <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
